# rust-by-example

./: Cargo.toml
practice_10_1_visibility/: Cargo.toml
practice_10_1_visibility/src/: main.rs
practice_10_2_struct_visibility/: Cargo.toml
practice_10_2_struct_visibility/src/: main.rs
practice_10_3_the_use_declaration/: Cargo.toml
practice_10_4_super_and_self/: Cargo.toml
practice_10_5_file_hierarchy/: Cargo.toml
practice_11_1_creating_a_library/: Cargo.toml
practice_11_2_using_a_library/: Cargo.toml
practice_11_2_using_a_library/src/: main.rs
practice_14_1_functions/: Cargo.toml
practice_14_2_implementation/: Cargo.toml
practice_14_3_traits/: Cargo.toml
practice_14_4_1_empty_bounds/: Cargo.toml
practice_14_4_bounds/: Cargo.toml
practice_14_4_bounds/src/: main.rs
practice_14_5_multiple_bounds/: Cargo.toml
practice_14_6_where_clauses/: Cargo.toml
practice_14_7_new_type_idiom/: Cargo.toml
practice_14_7_new_type_idiom/src/: main.rs
practice_14_8_1_the_problem/: Cargo.toml
practice_14_8_2_associated_types/: Cargo.toml
practice_14_9_1_unit_clarification/: Cargo.toml
practice_14_9_phantom_type_parameters/: Cargo.toml
practice_14_generics/: Cargo.toml
practice_16_1_derive/: Cargo.toml
practice_16_1_derive/src/: main.rs
practice_16_2_returning_traits_with_dyn/: Cargo.toml
practice_16_3_operator_overloading/: Cargo.toml
practice_16_4_drop/: Cargo.toml
practice_16_5_iterators/: Cargo.toml
practice_16_5_iterators/src/: main.rs
practice_16_6_impl_trait/: Cargo.toml
practice_16_6_impl_trait/src/: main.rs
practice_16_7_clone/: Cargo.toml
practice_16_7_clone/src/: main.rs
practice_16_8_supertraits/: Cargo.toml
practice_16_8_supertraits/src/: main.rs
practice_16_9_disambiguating/: Cargo.toml
practice_16_traits/: Cargo.toml
practice_16_traits/src/: main.rs
practice_19_1_box_stack_and_heap/: Cargo.toml
practice_19_2_vectors/: Cargo.toml
practice_19_3_strings/: Cargo.toml
practice_19_4_option/: Cargo.toml
practice_19_4_option/src/: main.rs
practice_19_5_1_question/: Cargo.toml
practice_19_5_1_question/src/: main.rs
practice_19_5_result/: Cargo.toml
practice_19_5_result/src/: main.rs
practice_19_7_1_key_types/: Cargo.toml
practice_19_7_2_hash_set/: Cargo.toml
practice_19_7_hash_map/: Cargo.toml
practice_1_1_comments/: Cargo.toml
practice_1_2_1_debug/: Cargo.toml
practice_1_2_1_debug/src/: main.rs
practice_1_2_2_1_list/: Cargo.toml
practice_1_2_2_1_list/src/: main.rs
practice_1_2_2_display/: Cargo.toml
practice_1_2_2_display/src/: main.rs
practice_1_2_3_formatting/: Cargo.toml
practice_1_2_3_formatting/src/: main.rs
practice_1_2_formatted_print/: Cargo.toml
practice_1_2_formatted_print/src/: main.rs
practice_1_hello/: Cargo.toml
practice_2_1_literals/: Cargo.toml
practice_2_1_literals/src/: main.rs
practice_2_2_tuples/: Cargo.toml
practice_2_2_tuples/src/: main.rs
practice_2_3_arrays_and_slices/: Cargo.toml
practice_2_3_arrays_and_slices/src/: main.rs
practice_2_primitives/: Cargo.toml
practice_2_primitives/src/: main.rs
practice_3_1_structures/: Cargo.toml
practice_3_1_structures/src/: main.rs
practice_3_2_1_use/: Cargo.toml
practice_3_2_1_use/src/: main.rs
practice_3_2_2_c_like/: Cargo.toml
practice_3_2_2_c_like/src/: main.rs
practice_3_2_3_linked_list/: Cargo.toml
practice_3_2_3_linked_list/src/: main.rs
practice_3_2_enums/: Cargo.toml
practice_3_3_constants/: Cargo.toml
practice_4_1_mutability/: Cargo.toml
practice_4_2_scope_and_shadowing/: Cargo.toml
practice_4_2_scope_and_shadowing/src/: main.rs
practice_4_3_declare_first/: Cargo.toml
practice_4_3_declare_first/src/: main.rs
practice_4_4_freezing/: Cargo.toml
practice_4_variable_bindings/: Cargo.toml
practice_5_1_casting/: Cargo.toml
practice_5_1_casting/src/: main.rs
practice_5_2_literals/: Cargo.toml
practice_5_3_inference/: Cargo.toml
practice_5_3_inference/src/: main.rs
practice_5_4_aliasing/: Cargo.toml
practice_5_4_aliasing/src/: main.rs
practice_6_1_from_and_into/: Cargo.toml
practice_6_1_from_and_into/src/: main.rs
practice_6_2_tryfrom_and_tryinto/: Cargo.toml
practice_6_3_to_and_from_strings/: Cargo.toml
practice_6_3_to_and_from_strings/src/: main.rs
practice_7_expressions/: Cargo.toml
practice_7_expressions/src/: main.rs
practice_8_1_if_else/: Cargo.toml
practice_8_1_if_else/src/: main.rs
practice_8_2_1_nesting_and_labels/: Cargo.toml
practice_8_2_1_nesting_and_labels/src/: main.rs
practice_8_2_2_returning_from_loops/: Cargo.toml
practice_8_2_loop/: Cargo.toml
practice_8_3_while/: Cargo.toml
practice_8_4_for_and_range/: Cargo.toml
practice_8_4_for_and_range/src/: main.rs
practice_8_5_1_1_tuples/: Cargo.toml
practice_8_5_1_2_arrays_slices/: Cargo.toml
practice_8_5_1_3_enums/: Cargo.toml
practice_8_5_1_3_enums/src/: main.rs
practice_8_5_1_4_pointers_ref/: Cargo.toml
practice_8_5_1_4_pointers_ref/src/: main.rs
practice_8_5_1_5_structs/: Cargo.toml
practice_8_5_1_5_structs/src/: main.rs
practice_8_5_2_guards/: Cargo.toml
practice_8_5_2_guards/src/: main.rs
practice_8_5_3_binding/: Cargo.toml
practice_8_5_3_binding/src/: main.rs
practice_8_5_match/: Cargo.toml
practice_8_6_if_let/: Cargo.toml
practice_8_6_if_let/src/: main.rs
practice_8_7_let_else/: Cargo.toml
practice_8_8_while_let/: Cargo.toml
practice_8_8_while_let/src/: main.rs
practice_9_1_methods/: Cargo.toml
practice_9_1_methods/src/: main.rs
practice_9_2_1_capturing/: Cargo.toml
practice_9_2_1_capturing/src/: main.rs
practice_9_2_2_as_input_parameters/: Cargo.toml
practice_9_2_3_type_anonymity/: Cargo.toml
practice_9_2_4_input_functions/: Cargo.toml
practice_9_2_5_as_output_parameters/: Cargo.toml
practice_9_2_6_1_iterator_any/: Cargo.toml
practice_9_2_6_1_iterator_any/src/: main.rs
practice_9_2_6_2_searching/: Cargo.toml
practice_9_2_closures/: Cargo.toml
practice_9_3_higher_order_functions/: Cargo.toml
practice_9_4_diverging_functions/: Cargo.toml
practice_9_functions/: Cargo.toml
(+3 files in other folders)
