[workspace]
resolver = "2"

members = [
    "practice_1_hello",
    "practice_1_1_comments",
    "practice_1_2_formatted_print",
    "practice_1_2_1_debug",
    "practice_1_2_2_display",
    "practice_1_2_2_1_list",
    "practice_1_2_3_formatting",
    "practice_2_primitives",
    "practice_2_1_literals",
    "practice_2_2_tuples",
    "practice_2_3_arrays_and_slices",
    "practice_3_1_structures",
    "practice_3_2_enums",
    "practice_3_2_1_use",
    "practice_3_2_2_c_like",
    "practice_3_2_3_linked_list",
    "practice_3_3_constants",
    "practice_4_variable_bindings",
    "practice_4_1_mutability",
    "practice_4_2_scope_and_shadowing",
    "practice_4_3_declare_first",
    "practice_4_4_freezing",
    "practice_5_1_casting",
    "practice_5_2_literals",
    "practice_5_3_inference",
    "practice_5_4_aliasing",
    "practice_6_1_from_and_into",
    "practice_6_2_tryfrom_and_tryinto",
    "practice_6_3_to_and_from_strings",
]
